@@ -19,6 +19,23 @@ SYNOPSIS
         $yaml = Dump(@data);
         @data = Load($yaml);
 
+WARNING
+    This module has a lot of known issues
+    <https://rt.cpan.org/Public/Dist/Display.html?Name=YAML-Syck> and hasn't
+    been actively maintained since 2007. If you encounter an issue with it
+    probably won't be fixed unless you offer up a patch
+    <http://github.com/avar/YAML-Syck> in Git that's ready for release.
+
+    Consider using YAML::XS instead, or not using YAML at all. YAML is
+    falling out of style in the Perl community in favor of simpler formats
+    like JSON, which don't suffer from the bugs and annoying
+    incompatibilities that plague the ambitious YAML format.
+
+    There are still some good reasons to use this module, such as better
+    interoperability with other syck wrappers (like Ruby's), or some edge
+    case of YAML's syntax that it handles better. Maybe it'll work perfectly
+    for you, but if it doesn't you may be in for some pain.
+
 DESCRIPTION
     This module provides a Perl interface to the libsyck data serialization
     library. It exports the "Dump" and "Load" functions for converting Perl
